feature/BB-16 implements portfolio entity